--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.1.0-rc.1",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
