--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-native": "0.64.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-vector-icons": "^8.1.0",
-    "react-redux": "^7.1.0-rc.1",
+    "react-redux": "^7.2.4",
     "redux": "^4.1.1"
   },
   "devDependencies": {
